--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
 version: '2'
+services:
   web:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: django_03
-    command: uwsgi --ini ./project/App/uwsgi.ini --static-map /static=./project/App/static
-
-
-    volumes:
-      - .:/home/DockerDemo
+    container_name: django_server
+    command: uwsgi --ini uwsgi.ini --static-map /static=./static
     ports:
       - "8000:8000"
-    depends_on:
-      - db
