--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-chdir = /Users/lixiaolong/Desktop/Django/App
+chdir = /home/DjangoApi/App
 module = App.wsgi:application
 max-requests = 5000
 master = True
